@@ -3,12 +3,13 @@ source "http://rubygems.org"
 gem "yard"
 
 group :test do
-  gem "activerecord", "~>3.0.0"
-  gem "mongoid", "~>2.0.0.beta.17"
-  gem "rspec", "~>2.0.0.beta.22"
+  gem "activerecord", "~> 3.0.0"
+  gem "mongoid", "~> 2.0.0.beta.17"
+  gem "rspec", "~> 2.0.0.rc"
   gem "jeweler"
   gem "rake"
   gem "sqlite3-ruby"
   gem "datamapper"
   gem "dm-sqlite-adapter"
+  gem "dm-active_model"
 end
