@@ -37,7 +37,12 @@ class ActiveRecord::Base
 
     # Get an instance by id of the model
     def get!(id)
-      klass.find(id)
+      klass.find(wrap_key(id))
+    end
+
+    # Get an instance by id of the model
+    def get(id)
+      klass.first :conditions => { klass.primary_key => wrap_key(id) }
     end
 
     # Find the first instance matching conditions
