@@ -24,7 +24,12 @@ module Mongoid
 
       # Get an instance by id of the model
       def get!(id)
-        klass.find(id)
+        klass.find(wrap_key(id))
+      end
+
+      # Get an instance by id of the model
+      def get(id)
+        klass.first(:conditions => { :id => wrap_key(id) })
       end
 
       # Find the first instance matching conditions
